--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,9 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-variables:
-  rootDir: 'my-app'
-  buildDir: '/build'
+# variables:
+#   rootDir: 'my-app'
+#   buildDir: '/build'
 
 steps:
   - task: NodeTool@0
@@ -31,7 +31,7 @@ steps:
 #--------------zip project--------------------------
   - task: ArchiveFiles@2
     inputs:
-      rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+      rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/build'
       includeRootFolder: false
       archiveType: 'zip'
       archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
