Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     # | = multi line commands
   - script: |
       # variables are specified using '$' then (*variable name*)
-      cd $(rootDir)
+      #cd $(rootDir)
       npm install
       npm run build
       cd ..
